<resources>
    <string name="app_name">Earthdawn Character Creator</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="circle">Circle</string>
    <string name="Dexterity">Dexterity</string>
    <string name="Strength">Strength</string>
    <string name="Toughness">Toughness</string>
    <string name="Perception">Perception</string>
    <string name="Willpower">Willpower</string>
    <string name="Charisma">Charisma</string>
    <string name="Dwarf">Dwarf</string>
    <string name="Elf">Elf</string>
    <string name="Human">Human</string>
    <string name="Obsidiman">Obsidiman</string>
    <string name="Ork">Ork</string>
    <string name="Troll">Troll</string>
    <string name="Tskrang">T\'Skrang</string>
    <string name="Windling">Windling</string>
    <string name="AirSailor">Air Sailor</string>
    <string name="Archer">Archer</string>
    <string name="Beastmaster">Beastmaster</string>
    <string name="Cavalryman">Cavalryman</string>
    <string name="Elementalist">Elementalist</string>
    <string name="Illusionist">Illusionist</string>
    <string name="Nethermancer">Nethermancer</string>
    <string name="Scout">Scout</string>
    <string name="SkyRaider">Sky Raider</string>
    <string name="Swordmaster">Swordmaster</string>
    <string name="Thief">Thief</string>
    <string name="Troubadour">Troubadour</string>
    <string name="Warrior">Warrior</string>
    <string name="Weaponsmith">Weaponsmith</string>
    <string name="Wizard">Wizard</string>
    <string name="Acrobatic_Defense">Acrobatic Defense</string>
    <string name="Air_Dance">Air Dance</string>
    <string name="Air_Sailing">Air Sailing</string>
    <string name="Air_Speaking">Air Speaking</string>
    <string name="Air_Weaving">Air Weaving</string>
    <string name="Animal_Bond">Animal Bond</string>
    <string name="Animal_Companion_Durability">Animal Companion Durability</string>
    <string name="Animal_Possession">Animal Possession</string>
    <string name="Animal_Talk">Animal Talk</string>
    <string name="Animal_Training">Animal Training</string>
    <string name="Anticipate_Blow">Anticipate Blow</string>
    <string name="Arcane_Mutterings">Arcane Mutterings</string>
    <string name="Armor_Mount">Armor Mount</string>
    <string name="Arrow_Weaving">Arrow Weaving</string>
    <string name="Astral_Interference">Astral Interference</string>
    <string name="Astral_Sight">Astral Sight</string>
    <string name="Avoid_Blow">Avoid Blow</string>
    <string name="Awareness">Awareness</string>
    <string name="Banish">Banish</string>
    <string name="Bank_Shot">Bank Shot</string>
    <string name="Battle_Bellow">Battle Bellow</string>
    <string name="Battle_Shout">Battle Shout</string>
    <string name="Beast_Weaving">Beast Weaving</string>
    <string name="Blade_Juggle">Blade Juggle</string>
    <string name="Blood_Share">Blood Share</string>
    <string name="Book_Memory">Book Memory</string>
    <string name="Borrow_Sense">Borrow Sense</string>
    <string name="Call_Animal_Companion">Call Animal Companion</string>
    <string name="Call_Missile">Call Missile</string>
    <string name="Charge">Charge</string>
    <string name="Claw_Frency">Claw Frency</string>
    <string name="Claw_Shape">Claw Shape</string>
    <string name="Climbing">Climbing</string>
    <string name="Cobra_Strike">Cobra Strike</string>
    <string name="Cold_Purify">Cold Purify</string>
    <string name="Command_Nightflyer">Command Nightflyer</string>
    <string name="Conceal_Object">Conceal Object</string>
    <string name="Conversation">Conversation</string>
    <string name="Creature_Analysis">Creature Analysis</string>
    <string name="Crushing_Blow">Crushing Blow</string>
    <string name="Danger_Sense">Danger Sense</string>
    <string name="Dead_Fall">Dead Fall</string>
    <string name="Diplomacy">Diplomacy</string>
    <string name="Direction_Arrow">Direction Arrow</string>
    <string name="Disarm">Disarm</string>
    <string name="Disarm_Trap">Disarm Trap</string>
    <string name="Disguise_Self">Disguise Self</string>
    <string name="Dispel_Magic">Dispel Magic</string>
    <string name="Distract">Distract</string>
    <string name="Dominate_Beast">Dominate Beast</string>
    <string name="Double_Charge">Double-Charge</string>
    <string name="Down_Strike">Down Strike</string>
    <string name="Earth_Skin">Earth Skin</string>
    <string name="Elementalism">Elementalism</string>
    <string name="Elemental_Hold">Elemental Hold</string>
    <string name="Elemental_Tongues">Elemental Tongues</string>
    <string name="Emotion_Song">Emotion Song</string>
    <string name="Empathic_Sense">Empathic Sense</string>
    <string name="Engaging_Banter">Engaging Banter</string>
    <string name="Enhanced_Matrix">Enhanced Matrix</string>
    <string name="Enhance_Animal_Companion">Enhance Animal Companion</string>
    <string name="Etiquette">Etiquette</string>
    <string name="Evidence_Analysis">Evidence Analysis</string>
    <string name="False_Sight">False Sight</string>
    <string name="Fast_Hand">Fast Hand</string>
    <string name="Fearsome_Charge">Fearsome Charge</string>
    <string name="Fireblood">Fireblood</string>
    <string name="Fire_Heal">Fire Heal</string>
    <string name="First_Impression">First Impression</string>
    <string name="Flame_Arrow">Flame Arrow</string>
    <string name="Forge_Armor">Forge Armor</string>
    <string name="Forge_Weapon">Forge Weapon</string>
    <string name="Frighten">Frighten</string>
    <string name="Gliding_Stride">Gliding Stride</string>
    <string name="Graceful_Exit">Graceful Exit</string>
    <string name="Great_Leap">Great Leap</string>
    <string name="Haggle">Haggle</string>
    <string name="Heartening_Laugh">Heartening Laugh</string>
    <string name="Hold_Thread">Hold Thread</string>
    <string name="Hypnotize">Hypnotize</string>
    <string name="Illusionism">Illusionism</string>
    <string name="Impressive_Display">Impressive Display</string>
    <string name="Inspire_Others">Inspire Others</string>
    <string name="Iron_Constitution">Iron Constitution</string>
    <string name="Item_History">Item History</string>
    <string name="Lasting_Impression">Lasting Impression</string>
    <string name="Leadership">Leadership</string>
    <string name="Lifesight">Lifesight</string>
    <string name="Life_Check">Life Check</string>
    <string name="Lion_Heart">Lion Heart</string>
    <string name="Lock_Picking">Lock Picking</string>
    <string name="Long_Shot">Long Shot</string>
    <string name="Maneuver">Maneuver</string>
    <string name="Melee_Weapons">Melee Weapons</string>
    <string name="Mimic_Voice">Mimic Voice</string>
    <string name="Missile_Weapons">Missile Weapons</string>
    <string name="Momentum_Attack">Momentum Attack</string>
    <string name="Mount_Attack">Mount Attack</string>
    <string name="Mystic_Aim">Mystic Aim</string>
    <string name="Navigation">Navigation</string>
    <string name="Nethermancy">Nethermancy</string>
    <string name="Orbiting_Spy">Orbiting Spy</string>
    <string name="Patterncraft">Patterncraft</string>
    <string name="Picking_Pockets">Picking Pockets</string>
    <string name="Power_Mask">Power Mask</string>
    <string name="Read_and_Write_Language">Read and Write Language</string>
    <string name="Research">Research</string>
    <string name="Resist_Taunt">Resist Taunt</string>
    <string name="Rider_Weaving">Rider Weaving</string>
    <string name="Riposte">Riposte</string>
    <string name="Safe_Path">Safe Path</string>
    <string name="Scout_Weaving">Scout Weaving</string>
    <string name="Second_Attack">Second Attack</string>
    <string name="Second_Shot">Second Shot</string>
    <string name="Second_Weapon">Second Weapon</string>
    <string name="Shield_Bash">Shield Bash</string>
    <string name="Sky_Weaving">Sky Weaving</string>
    <string name="Slough_Blame">Slough Blame</string>
    <string name="Speak_Language">Speak Language</string>
    <string name="Spellcasting">Spellcasting</string>
    <string name="Spirit_Hold">Spirit Hold</string>
    <string name="Spirit_Mount">Spirit Mount</string>
    <string name="Spirit_Talk">Spirit Talk</string>
    <string name="Spot_Armor_Flaw">Spot Armor Flaw</string>
    <string name="Sprint">Sprint</string>
    <string name="Standard_Matrix">Standard Matrix</string>
    <string name="Stealthy_Stride">Stealthy Stride</string>
    <string name="Steely_Stare">Steely Stare</string>
    <string name="Steel_Thought">Steel Thought</string>
    <string name="Stopping_Aim">Stopping Aim</string>
    <string name="Story_Weaving">Story Weaving</string>
    <string name="Summon_Ally_Spirits">Summon [Ally Spirits]</string>
    <string name="Summon_Elemental_Spirit">Summon [Elemental Spirit]</string>
    <string name="Suppress_Curse">Suppress Curse</string>
    <string name="Sure_Mount">Sure Mount</string>
    <string name="Surprise_Strike">Surprise Strike</string>
    <string name="Swift_Kick">Swift Kick</string>
    <string name="Tactics">Tactics</string>
    <string name="Taunt">Taunt</string>
    <string name="Temper_Flesh">Temper Flesh</string>
    <string name="Tenacious_Weave">Tenacious Weave</string>
    <string name="Thief_Weaving">Thief Weaving</string>
    <string name="Thought_Link">Thought Link</string>
    <string name="Thread_Smithing">Thread Smithing</string>
    <string name="Thread_Weaving">Thread Weaving</string>
    <string name="Throwing_Weapons">Throwing Weapons</string>
    <string name="Tiger_Spring">Tiger Spring</string>
    <string name="Tracking">Tracking</string>
    <string name="Trick_Riding">Trick Riding</string>
    <string name="True_Shot">True Shot</string>
    <string name="True_Sight">True Sight</string>
    <string name="Unarmed_Combat">Unarmed Combat</string>
    <string name="War_Weaving">War Weaving</string>
    <string name="Waterfall_Slam">Waterfall Slam</string>
    <string name="Weapon_Weaving">Weapon Weaving</string>
    <string name="Wheeling_Attack">Wheeling Attack</string>
    <string name="Wheeling_Defense">Wheeling Defense</string>
    <string name="Wilderness_Survival">Wilderness Survival</string>
    <string name="Willforce">Willforce</string>
    <string name="Wind_Catcher">Wind Catcher</string>
    <string name="ut">Unconscious Threshold</string>
    <string name="dt">Death Threshold</string>
    <string name="wt">Wound Threshold</string>
    <string name="pd">Physical Defense</string>
    <string name="md">Mystical Defense</string>
    <string name="sd">Social Defense</string>
    <string name="pa">Physical Armor</string>
    <string name="ma">Mystical Armor</string>
    <string name="rc">Recovery Tests</string>
    <string name="mr">Movement Rate</string>
    <string name="cc">Carry Capacity</string>
    <string name="ll">Lifting Limit</string>
    <string name="initiative">Initiative</string>
    <string name="action_advancecircle">Advance circle</string>
    <string name="action_raiseattribute">Raise attribute</string>
    <string name="action_improvetalentranks">Improve talent ranks</string>
    <string name="action_reducetalentranks">Reduce talent ranks</string>
    <string name="tab_general_label_charactername">Name:</string>
    <string name="tab_general_label_discipline">Discipline:</string>
    <string name="tab_general_label_circle">Circle:</string>
    <string name="label_character_name">Enter character name</string>
    <string name="label_character_race">Choose character race</string>
    <string name="label_character_discipline">Choose character discipline</string>
    <string name="label_talent">Talent</string>
    <string name="label_rank">Rank</string>
    <string name="label_attribute">Attribute</string>
    <string name="label_dice">Dice</string>
    <string name="label_action">Action</string>
    <string name="label_discipline">Discipline</string>
    <string name="label_strain">Strain</string>
</resources>