<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:text="@string/label_talent"
            android:textStyle="bold"
            android:layout_weight="13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/label_rank"
            android:textStyle="bold"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/label_attribute"
            android:textStyle="bold"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="4"/>
        <TextView
            android:text="@string/label_dice"
            android:textStyle="bold"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/label_discipline"
            android:textStyle="bold"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="4"/>
        <TextView
            android:text="@string/label_action"
            android:textStyle="bold"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/label_strain"
            android:textStyle="bold"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/talent_list"/>
</LinearLayout>