<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.pulzer.android.earthdawncharactercreator.ShowCharacterActivity">
    <item
        android:id="@+id/action_advancecircle"
        android:orderInCategory="100"
        android:title="@string/action_advancecircle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_raiseattribute"
        android:orderInCategory="101"
        android:title="@string/action_raiseattribute"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_improvetalentranks"
        android:orderInCategory="102"
        android:title="@string/action_improvetalentranks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reducetalentranks"
        android:orderInCategory="103"
        android:title="@string/action_reducetalentranks"
        app:showAsAction="never" />
</menu>
