<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/name_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/label_character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_character_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/input_character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/race_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/label_character_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_character_race"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner_character_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/btn_dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/discipline_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/label_character_discipline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_character_discipline"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner_character_discipline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/btn_dropdown"/>
    </LinearLayout>
</LinearLayout>